--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1 class="Entete_Titre-Tournois">Tournois de lancement</h1>
       <p class="Entete_Description">Tournois d'overwatch du Mardi 16 Janvier 2018.</p>
       <p class="Entete_Nom-Hote">Prism</p>
-      <img src="Contenu/Logos_Jeux/Overwatch" alt="Logo Jeux" class="Entete_Logo-Jeux">
+      <img src="Contenu/Logos_Jeux/Overwatch.png" alt="Logo Jeux" class="Entete_Logo-Jeux">
     </header>
   </body>
 </html>
