--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="style.css">
 
   </head>
-  <body>
-    <header>
+  <body class="Page">
+    <header class="Entete">
       <h1 class="Entete_Titre-Tournois">Tournois de lancement</h1>
       <p class="Entete_Description">Tournois d'overwatch du Mardi 16 Janvier 2018.</p>
       <p class="Entete_Nom-Hote">Prism</p>
       <img src="Contenu/Logos_Jeux/Overwatch.png" alt="Logo Jeux" class="Entete_Logo-Jeux">
     </header>
+
+    <section class="Arbre">
+      <a href="Contenu/test/index.html">TEST</a>
+    </section>
   </body>
 </html>
