Début de création de l'arbre
+ Insertion de la première ligne de joueurs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,42 @@
     </header>
 
     <section class="Arbre">
-      <a href="Contenu/test/index.html">TEST</a>
+      <div class="Arbre_Tour-3">
+        <div class="Joueur-1">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
+        </div>
+        <div class="Joueur-2">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 2">
+        </div>
+        <div class="Joueur-3">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 3">
+        </div>
+        <div class="Joueur-4">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 4">
+        </div>
+        <div class="Joueur-5">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 5">
+        </div>
+        <div class="Joueur-6">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 6">
+        </div>
+        <div class="Joueur-7">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 7">
+        </div>
+        <div class="Joueur-8">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 8">
+        </div>
+      </div>
+
+      <div class="Arbre_Tour-2">
+
+      </div>
+
+      <div class="Arbre_Tour-1">
+
+      </div>
     </section>
+
+    <a href="Contenu/test/index.html">TEST</a>
   </body>
 </html>
