--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       <div class="Arbre_Tour-3">
         <div class="Joueur-1">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
+          <div class="connector_tour"></div>
         </div>
         <div class="Joueur-2">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 2">
+          <div class="connector_tour"></div>
         </div>
         <div class="Joueur-3">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 3">
@@ -42,12 +44,62 @@
         </div>
       </div>
 
+      <div class="Arbre_Liens-1">
+        <div class="Connecter Connecter-1">
+
+        </div>
+        <div class="Connecter Connecter-2">
+
+        </div>
+        <div class="Connecter Connecter-3">
+
+        </div>
+        <div class="Connecter Connecter-4">
+
+        </div>
+      </div>
+
       <div class="Arbre_Tour-2">
+        <div class="Joueur-1">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
+        </div>
+
+        <div class="Joueur-3">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 3">
+        </div>
+
+        <div class="Joueur-5">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 5">
+        </div>
+
+        <div class="Joueur-7">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 7">
+        </div>
+
+      </div>
+
+      <div class="Arbre_Liens-2">
 
       </div>
 
       <div class="Arbre_Tour-1">
+        <div class="Joueur-1">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
+        </div>
 
+        <div class="Joueur-5">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 5">
+        </div>
+      </div>
+
+      <div class="Arbre_Liens-2">
+
+      </div>
+
+      <div class="Arbre_Tour-0">
+        <div class="Joueur-1">
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
+        </div>
       </div>
     </section>
 
