--- a/index.html
+++ b/index.html
@@ -14,38 +14,45 @@
       <img src="Contenu/Logos_Jeux/Overwatch.png" alt="Logo Jeux" class="Entete_Logo-Jeux">
     </header>
 
-    <section class="Arbre">
+    <section class="Arbre">                 <!-- 
       <div class="Arbre_Tour-3">
-        <div class="Joueur-1">
+        <div class="Joueur Joueur-1">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
           <div class="connector_tour"></div>
         </div>
-        <div class="Joueur-2">
+
+        <div class="Joueur Joueur-2">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 2">
           <div class="connector_tour"></div>
         </div>
-        <div class="Joueur-3">
+
+        <div class="Joueur Joueur-3">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 3">
         </div>
-        <div class="Joueur-4">
+
+        <div class="Joueur Joueur-4">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 4">
         </div>
-        <div class="Joueur-5">
+
+        <div class="Joueur Joueur-5">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 5">
         </div>
-        <div class="Joueur-6">
+
+        <div class="Joueur Joueur-6">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 6">
         </div>
-        <div class="Joueur-7">
+
+        <div class="Joueur Joueur-7">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 7">
         </div>
-        <div class="Joueur-8">
+
+        <div class="Joueur Joueur-8">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 8">
         </div>
       </div>
 
       <div class="Arbre_Liens-1">
-        <div class="Connecter Connecter-1">
+        <!-- <div class="Connecter Connecter-1">
 
         </div>
         <div class="Connecter Connecter-2">
@@ -56,23 +63,23 @@
         </div>
         <div class="Connecter Connecter-4">
 
-        </div>
+        </div> -->
       </div>
 
       <div class="Arbre_Tour-2">
-        <div class="Joueur-1">
+        <div class="Joueur Joueur-1">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
         </div>
 
-        <div class="Joueur-3">
+        <div class="Joueur Joueur-3">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 3">
         </div>
 
-        <div class="Joueur-5">
+        <div class="Joueur Joueur-5">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 5">
         </div>
 
-        <div class="Joueur-7">
+        <div class="Joueur Joueur-7">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 7">
         </div>
 
@@ -83,11 +90,11 @@
       </div>
 
       <div class="Arbre_Tour-1">
-        <div class="Joueur-1">
+        <div class="Joueur Joueur-1">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
         </div>
 
-        <div class="Joueur-5">
+        <div class="Joueur Joueur-5">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 5">
         </div>
       </div>
@@ -97,7 +104,7 @@
       </div>
 
       <div class="Arbre_Tour-0">
-        <div class="Joueur-1">
+        <div class="Joueur Joueur-1">
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
         </div>
       </div>
