--- a/index.html
+++ b/index.html
@@ -15,73 +15,94 @@
       <img src="Contenu/Logos_Jeux/Overwatch.png" alt="Logo Jeux" class="Entete_Logo-Jeux">
     </header>
 
-    <section class="Arbre">                 <!-- 
-      <div class="Arbre_Tour-3">
-        <div class="Joueur Joueur-1">
+    <section class="Arbre">                                       <!-- Conteneur Flex pour l'Arbre -->
+      <div class="Arbre_Tour-3">                                  <!-- 1er tour -->
+        <div class="Joueur Joueur-1">                             <!-- Joueur 1 -->
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
-          <div class="connector_tour"></div>
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
 
-        <div class="Joueur Joueur-2">
+        <div class="Joueur Joueur-2">                             <!-- Joueur 2 -->
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 2">
-          <div class="connector_tour"></div>
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
 
-        <div class="Joueur Joueur-3">
+        <div class="Joueur Joueur-3">                             <!-- Joueur 3 -->
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 3">
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
 
-        <div class="Joueur Joueur-4">
+        <div class="Joueur Joueur-4">                             <!-- Joueur 4 -->
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 4">
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
 
-        <div class="Joueur Joueur-5">
+        <div class="Joueur Joueur-5">                             <!-- Joueur 5 -->
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 5">
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
 
-        <div class="Joueur Joueur-6">
+        <div class="Joueur Joueur-6">                             <!-- Joueur 6 -->
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 6">
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
 
-        <div class="Joueur Joueur-7">
+        <div class="Joueur Joueur-7">                             <!-- Joueur 7 -->
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 7">
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
 
-        <div class="Joueur Joueur-8">
+        <div class="Joueur Joueur-8">                             <!-- Joueur 8 -->
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 8">
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
       </div>
 
-      <div class="Arbre_Liens-1">
-        <!-- <div class="Connecter Connecter-1">
-
+      <div class="Arbre_Liens-1">                                 <!-- Connecteur joueurs -->
+        <div class="Connecter Connecter-1">
+          <div class=""></div>
+          <div class=""></div>
         </div>
+
         <div class="Connecter Connecter-2">
-
+          <div class=""></div>
+          <div class=""></div>
         </div>
+
         <div class="Connecter Connecter-3">
-
+          <div class=""></div>
+          <div class=""></div>
         </div>
-        <div class="Connecter Connecter-4">
 
-        </div> -->
+        <div class="Connecter Connecter-4">
+          <div class=""></div>
+          <div class=""></div>
+        </div>
       </div>
 
       <div class="Arbre_Tour-2">
         <div class="Joueur Joueur-1">
+          <div class="Connecteur-Haut-Joueur"></div>
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
 
         <div class="Joueur Joueur-3">
+          <div class="Connecteur-Haut-Joueur"></div>
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 3">
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
 
         <div class="Joueur Joueur-5">
+          <div class="Connecteur-Haut-Joueur"></div>
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 5">
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
 
         <div class="Joueur Joueur-7">
+          <div class="Connecteur-Haut-Joueur"></div>
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 7">
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
 
       </div>
@@ -92,11 +113,15 @@
 
       <div class="Arbre_Tour-1">
         <div class="Joueur Joueur-1">
+          <div class="Connecteur-Haut-Joueur"></div>
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
 
         <div class="Joueur Joueur-5">
+          <div class="Connecteur-Haut-Joueur"></div>
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 5">
+          <div class="Connecteur-Bas-Joueur"></div>
         </div>
       </div>
 
@@ -106,6 +131,7 @@
 
       <div class="Arbre_Tour-0">
         <div class="Joueur Joueur-1">
+          <div class="Connecteur-Haut-Joueur"></div>
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
         </div>
       </div>
