Ciblage class connecteurs
+ Amélioration du ciblage des classes des connecteurs. Chaques connecteurs est maintenant assigné à sa position (haut ou bas) et à son joueur (Joueur-X)

--- a/index.html
+++ b/index.html
@@ -17,44 +17,44 @@
 
     <section class="Arbre">                                       <!-- Conteneur Flex pour l'Arbre -->
       <div class="Arbre_Tour-3">                                  <!-- 1er tour -->
-        <div class="Joueur Joueur-1">                             <!-- Joueur 1 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">                             <!-- Joueur 1 -->
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-11">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-1"></div>
         </div>
 
-        <div class="Joueur Joueur-2">                             <!-- Joueur 2 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 2">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">                             <!-- Joueur 2 -->
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 2" class="Img-Joueur-12">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-2"></div>
         </div>
 
-        <div class="Joueur Joueur-3">                             <!-- Joueur 3 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 3">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">                             <!-- Joueur 3 -->
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 3" class="Img-Joueur-13">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-3"></div>
         </div>
 
-        <div class="Joueur Joueur-4">                             <!-- Joueur 4 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 4">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">                             <!-- Joueur 4 -->
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 4" class="Img-Joueur-14">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-4"></div>
         </div>
 
-        <div class="Joueur Joueur-5">                             <!-- Joueur 5 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 5">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">                             <!-- Joueur 5 -->
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 5" class="Img-Joueur-15">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-5"></div>
         </div>
 
-        <div class="Joueur Joueur-6">                             <!-- Joueur 6 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 6">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">                             <!-- Joueur 6 -->
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 6" class="Img-Joueur-16">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-6"></div>
         </div>
 
-        <div class="Joueur Joueur-7">                             <!-- Joueur 7 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 7">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">                             <!-- Joueur 7 -->
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 7" class="Img-Joueur-17">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-7"></div>
         </div>
 
-        <div class="Joueur Joueur-8">                             <!-- Joueur 8 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 8">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">                             <!-- Joueur 8 -->
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 8" class="Img-Joueur-18">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-8"></div>
         </div>
       </div>
 
@@ -81,28 +81,28 @@
       </div>
 
       <div class="Arbre_Tour-2">
-        <div class="Joueur Joueur-1">
-          <div class="Connecteur-Haut-Joueur"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">
+          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-1"></div>
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-11">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-1"></div>
         </div>
 
-        <div class="Joueur Joueur-3">
-          <div class="Connecteur-Haut-Joueur"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 3">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">
+          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-3"></div>
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 3" class="Img-Joueur-13">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-3"></div>
         </div>
 
-        <div class="Joueur Joueur-5">
-          <div class="Connecteur-Haut-Joueur"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 5">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">
+          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-5"></div>
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 5" class="Img-Joueur-15">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-5"></div>
         </div>
 
-        <div class="Joueur Joueur-7">
-          <div class="Connecteur-Haut-Joueur"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 7">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">
+          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-7"></div>
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 7" class="Img-Joueur-17">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-7"></div>
         </div>
 
       </div>
@@ -112,16 +112,16 @@
       </div>
 
       <div class="Arbre_Tour-1">
-        <div class="Joueur Joueur-1">
-          <div class="Connecteur-Haut-Joueur"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">
+          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-1"></div>
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-11">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-1"></div>
         </div>
 
-        <div class="Joueur Joueur-5">
-          <div class="Connecteur-Haut-Joueur"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 5">
-          <div class="Connecteur-Bas-Joueur"></div>
+        <div class="Joueur">
+          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-5"></div>
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 5" class="Img-Joueur-15">
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-5"></div>
         </div>
       </div>
 
@@ -130,9 +130,9 @@
       </div>
 
       <div class="Arbre_Tour-0">
-        <div class="Joueur Joueur-1">
-          <div class="Connecteur-Haut-Joueur"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1">
+        <div class="Joueur">
+          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-1"></div>
+          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-11">
         </div>
       </div>
     </section>
