--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="script.js"></script>
 
   </head>
+
   <body class="Page">
     <header class="Entete">
       <h1 class="Entete_Titre-Tournois">Tournois de lancement</h1>
@@ -15,72 +16,104 @@
       <img src="Contenu/Logos_Jeux/Overwatch.png" alt="Logo Jeux" class="Entete_Logo-Jeux">
     </header>
 
-    <section class="Arbre">                                       <!-- Conteneur Flex pour l'Arbre -->
-      <div class="Arbre_Tour-3">                                  <!-- 1er tour -->
-        <div class="Joueur">                             <!-- Joueur 1 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-11">
+    <section class="Arbre">                                           <!-- Conteneur Flex pour l'Arbre -->
+      <div class="Arbre_Tour Arbre_Tour-3">                             <!-- 1er tour -->
+        <div class="Arbre_Tour-3_Joueur-1">                             <!-- Conteneur Joueur 1 -->
+          <div class="Joueur Joueur-1">                                 <!-- Infos Joueur 1 -->
+            <p class="Pseudo-Joueurs Pseudo-Joueur-1">Joueur 1</p>
+            <p class="Score-Joueurs Score-Joueur-1">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-1"> -->
+          </div>
           <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-1"></div>
         </div>
 
-        <div class="Joueur">                             <!-- Joueur 2 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 2" class="Img-Joueur-12">
+        <div class="Arbre_Tour-3_Joueur-2">                             <!-- Conteneur Joueur 2 -->
+          <div class="Joueur Joueur-2">                                 <!-- Infos Joueur 2 -->
+            <p class="Pseudo-Joueurs Pseudo-Joueur-2">Joueur 2</p>
+            <p class="Score-Joueurs Score-Joueur-2">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 2" class="Img-Joueur-2"> -->
+          </div>
           <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-2"></div>
         </div>
 
-        <div class="Joueur">                             <!-- Joueur 3 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 3" class="Img-Joueur-13">
+        <div class="Arbre_Tour-3_Joueur-3">                             <!-- Conteneur Joueur 3 -->
+          <div class="Joueur Joueur-3">                                 <!-- Infos Joueur 3 -->
+            <p class="Pseudo-Joueurs Pseudo-Joueur-3">Joueur 3</p>
+            <p class="Score-Joueurs Score-Joueur-3">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 3" class="Img-Joueur-3"> -->
+          </div>
           <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-3"></div>
         </div>
 
-        <div class="Joueur">                             <!-- Joueur 4 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 4" class="Img-Joueur-14">
+        <div class="Arbre_Tour-3_Joueur-4">                             <!-- Conteneur Joueur 4 -->
+          <div class="Joueur Joueur-4">                                 <!-- Infos Joueur 4 -->
+            <p class="Pseudo-Joueurs Pseudo-Joueur-4">Joueur 4</p>
+            <p class="Score-Joueurs Score-Joueur-4">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 4" class="Img-Joueur-4"> -->
+          </div>
           <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-4"></div>
         </div>
 
-        <div class="Joueur">                             <!-- Joueur 5 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 5" class="Img-Joueur-15">
+        <div class="Arbre_Tour-3_Joueur-5">                             <!-- Conteneur Joueur 5 -->
+          <div class="Joueur Joueur-5">                                 <!-- Infos Joueur 5 -->
+            <p class="Pseudo-Joueurs Pseudo-Joueur-5">Joueur 5</p>
+            <p class="Score-Joueurs Score-Joueur-5">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 5" class="Img-Joueur-5"> -->
+          </div>
           <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-5"></div>
         </div>
 
-        <div class="Joueur">                             <!-- Joueur 6 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 6" class="Img-Joueur-16">
+        <div class="Arbre_Tour-3_Joueur-6">                             <!-- Conteneur Joueur 6 -->
+          <div class="Joueur Joueur-6">                                 <!-- Infos Joueur 6 -->
+            <p class="Pseudo-Joueurs Pseudo-Joueur-6">Joueur 6</p>
+            <p class="Score-Joueurs Score-Joueur-6">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 6" class="Img-Joueur-6"> -->
+          </div>
           <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-6"></div>
         </div>
 
-        <div class="Joueur">                             <!-- Joueur 7 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 7" class="Img-Joueur-17">
+        <div class="Arbre_Tour-3_Joueur-7">                             <!-- Conteneur Joueur 7 -->
+          <div class="Joueur Joueur-7">                                 <!-- Infos Joueur 7 -->
+            <p class="Pseudo-Joueurs Pseudo-Joueur-7">Joueur 7</p>
+            <p class="Score-Joueurs Score-Joueur-7">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 7" class="Img-Joueur-7"> -->
+          </div>
           <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-7"></div>
         </div>
 
-        <div class="Joueur">                             <!-- Joueur 8 -->
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 8" class="Img-Joueur-18">
+        <div class="Arbre_Tour-3_Joueur-8">                             <!-- Conteneur Joueur 8 -->
+          <div class="Joueur Joueur-8">                                 <!-- Infos Joueur 8 -->
+            <p class="Pseudo-Joueurs Pseudo-Joueur-8">Joueur 8</p>
+            <p class="Score-Joueurs Score-Joueur-8">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 8" class="Img-Joueur-8"> -->
+          </div>
           <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-8"></div>
         </div>
       </div>
 
-      <div class="Arbre_Liens-1">                                 <!-- Connecteur joueurs -->
-        <div class="Connecter Connecter-1">
-          <div class=""></div>
-          <div class=""></div>
+      <div class="Arbre_Conteneur-Connecteurs-Inter-Tours Arbre_Conteneur-Connecteurs-Inter-Tours-1">             <!-- Conteneur Flex pour les Connecteurs entre joueurs du 1er Tour-->
+        <div class="Conteneur-Connecteurs Conteneur-Connecteurs-1"><!-- 1er Connecteurs -->
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
         </div>
 
-        <div class="Connecter Connecter-2">
-          <div class=""></div>
-          <div class=""></div>
+        <div class="Conteneur-Connecteurs Conteneur-Connecteurs-2">
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
         </div>
 
-        <div class="Connecter Connecter-3">
-          <div class=""></div>
-          <div class=""></div>
+        <div class="Conteneur-Connecteurs Conteneur-Connecteurs-3">
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
         </div>
 
-        <div class="Connecter Connecter-4">
-          <div class=""></div>
-          <div class=""></div>
+        <div class="Conteneur-Connecteurs Conteneur-Connecteurs-4">
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
         </div>
       </div>
 
-      <div class="Arbre_Tour-2">
+      <div class="Arbre_Tour Arbre_Tour-2">
         <div class="Joueur">
           <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-1"></div>
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-11">
@@ -105,13 +138,26 @@
           <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-7"></div>
         </div>
 
+      </div>                        <!-- 2eme tour -->
+
+      <div class="Arbre_Connecteurs Arbre_Liens-2">
+        <div class="Arbre_Liens_Conteneur Arbre_Liens-2_Conteneur-1">
+          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-2_Conteneur-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-2_Conteneur-1_Connecteur-Droit"></div>
+        </div>
+
+        <div class="Arbre_Liens_Conteneur Arbre_Liens-2_Conteneur-2">
+          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-2_Conteneur-2_Connecteur-Gauche"></div>
+          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-2_Conteneur-2_Connecteur-Gauche"></div>
+        </div>
+
+        <div class="Arbre_Liens_Conteneur Arbre_Liens-2_Conteneur-3">
+          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-2_Conteneur-3_Connecteur-Gauche"></div>
+          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-2_Conteneur-3_Connecteur-Gauche"></div>
+        </div>
       </div>
 
-      <div class="Arbre_Liens-2">
-
-      </div>
-
-      <div class="Arbre_Tour-1">
+      <div class="Arbre_Tour Arbre_Tour-1">
         <div class="Joueur">
           <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-1"></div>
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-11">
@@ -123,18 +169,26 @@
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 5" class="Img-Joueur-15">
           <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-5"></div>
         </div>
+      </div>                        <!-- 3eme tour -->
+
+      <div class="Arbre_Connecteurs Arbre_Liens-3">
+        <div class="Arbre_Liens_Conteneur Arbre_Liens-3_Conteneur-1">
+          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-3_Conteneur-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-3_Conteneur-1_Connecteur-Droit"></div>
+        </div>
+
+        <div class="Arbre_Liens_Conteneur Arbre_Liens-3_Conteneur-2">
+          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-3_Conteneur-2_Connecteur-Gauche"></div>
+          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-3_Conteneur-2_Connecteur-Gauche"></div>
+        </div>
       </div>
 
-      <div class="Arbre_Liens-2">
-
-      </div>
-
-      <div class="Arbre_Tour-0">
+      <div class="Arbre_Tour Arbre_Tour-0">
         <div class="Joueur">
           <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-1"></div>
           <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-11">
         </div>
-      </div>
+      </div>                        <!-- Finale -->
     </section>
 
     <a href="Contenu/test/index.html">TEST</a>
