--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
     </header>
 
 
+    <section class="Onglets">
+      <div class="Onglets_Pad Onglets_Arbre">
+        <p class="Onglets_Texte">Arbre</p>
+      </div>
+
+      <div class="Onglets_Pad Onglet_Joueurs">
+        <p class="Onglets_Texte">Joueurs</p>
+      </div>
+
+      <div class="Onglets_Pad Onglet_Parametres">
+        <p class="Onglets_Texte">Paramètres</p>
+      </div>
+
+      <div class="Onglets_Pad Onglets_Aide">
+        <p class="Onglets_Texte">Aide</p>
+      </div>
+    </section>
+
+
 
     <section class="Arbre">                                           <!-- Conteneur Flex pour l'Arbre -->
 
@@ -228,6 +247,8 @@
       </div>
 
     </section>
+
+
 
     <a href="Contenu/test/index.html">TEST</a>
   </body>
