Création des onglets
+ Onglet Joueur (invisible)
+ Onglet Parametre (invisible)
+ Onglet Aide (invisible)
+ Création des classes pour chaques onglets et réadaptation de la classe de l'arbre
+ Style sur les onglets

NB : Tout les onglets invisibles sont en display : none

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
 
-    <section class="Onglets">
+    <nav class="Onglets">
       <div class="Onglets_Pad Onglets_Arbre">
         <p class="Onglets_Texte">Arbre</p>
       </div>
@@ -33,11 +33,11 @@
       <div class="Onglets_Pad Onglets_Aide">
         <p class="Onglets_Texte">Aide</p>
       </div>
-    </section>
+    </nav>
 
 
 
-    <section class="Arbre">                                           <!-- Conteneur Flex pour l'Arbre -->
+    <section class="Arbre-Onglet">                                           <!-- Conteneur Flex pour l'Arbre -->
 
       <div class="Arbre_Tour Arbre_Tour-3">                             <!-- 1er tour -->
 
@@ -250,6 +250,29 @@
 
 
 
+    <section class="Joueurs-Onglet">
+      <p class="Joueurs-Onglet_Joueur-1">Joueur 1</p>
+      <p class="Joueurs-Onglet_Joueur-2">Joueur 2</p>
+      <p class="Joueurs-Onglet_Joueur-3">Joueur 3</p>
+      <p class="Joueurs-Onglet_Joueur-4">Joueur 4</p>
+      <p class="Joueurs-Onglet_Joueur-5">Joueur 5</p>
+      <p class="Joueurs-Onglet_Joueur-6">Joueur 6</p>
+      <p class="Joueurs-Onglet_Joueur-7">Joueur 7</p>
+      <p class="Joueurs-Onglet_Joueur-8">Joueur 8</p>
+    </section>
+
+
+    <section class="Parametres-Onglet">
+      <p class="Parametres-Onglet_Nom-Tournois">Le nom du tournois</p>
+      <p class="Parametres-Onglet_Desc-Tournois">Description du tournois</p>
+      <p class="Parametres-Onglet_Hergeur-Tournois">Tournois Hébergé par...</p>
+      <p class="Parametres-Onglet_Jeux-Tournois">Le jeux</p>
+    </section>
+
+
+    <section class="Aide-Onglet">
+      <p>Ceci sera donc l'aide de la page !</p>
+    </section>
     <a href="Contenu/test/index.html">TEST</a>
   </body>
 </html>
