--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
       <p class="Parametres-Onglet_Desc-Tournois">Description du tournois</p>
       <p class="Parametres-Onglet_Hergeur-Tournois">Tournois Hébergé par...</p>
       <p class="Parametres-Onglet_Jeux-Tournois">Le jeux</p>
+      <button type="button" name="Parametres-Appliquer">Appliquer</button>
     </section>
 
 
