--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
       <p class="Joueurs-Onglet_Joueur-6">Joueur 6</p>
       <p class="Joueurs-Onglet_Joueur-7">Joueur 7</p>
       <p class="Joueurs-Onglet_Joueur-8">Joueur 8</p>
+      <button type="button" name="Joueurs-Appliquer">Appliquer</button>
     </section>
 
 
