--- a/NEW/index.html
+++ b/NEW/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="../Contenu/Logos/Favicon.png" />
     <title>Gestion Tournois</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <script type="text/javascript" src="../script.js"></script> -->
+    <script type="text/javascript" src="dounodawae.js"></script>
   </head>
 
   <body class="Page">
